--- a/frontend/src/Components/Header/Header.css
+++ b/frontend/src/Components/Header/Header.css
@@ -1,8 +1,8 @@
 .header{
     height:34vw;
     margin:10px auto;
-    background: url("./header_img.png") no-repeat;
-    background-size: contain;
+    background: url("../../assets/meal_image.png") no-repeat center center;
+    background-size: cover;
     position: relative;
 }
 .header-contents{
@@ -10,28 +10,19 @@
     display: flex;
     flex-direction: column;
     align-items: start;
-    gap: 1.5vw;
+    gap: 1vw;
     max-width: 50%;
-    bottom: 10%;
+    bottom: 20%;
     left: 6vh;
     animation:fadeIn 3s;
 }
 .header-contents h2{
     font-weight: 500;
-    color: white;
+    color:#262626;
     font-size: max(4.5vw,22px);
 
 }
 
-.header-contents .cravings{
-    font-weight: 700;
-    color: #262626;
-}
-
-.header-contents p{
-    color: white;
-    font-size: 1vw;
-}
 .header-contents button{
     border:none;
     color: #747474;
@@ -49,9 +40,6 @@
 @media(max-width:750px){
     .header-contents{
         max-width: 65%;
-    }
-    .header-contents p{
-        display: none;
     }
     .header-contents button{
         padding:2vw 4vw;
